--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@ header {
 }
 
 /*mobiles*/
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 767px) {
     .img_chatGPT {
         width: 110px;
         height: 150px;
@@ -445,7 +445,7 @@ header {
     margin-top: 400px;
 }
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 767px) {
     .img_search {
         width: 110px;
         height: 150px;
@@ -549,7 +549,7 @@ header {
     margin-top: 400px;
 }
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 767px) {
     .div3 {
         margin-left: 35px;
         }
@@ -651,7 +651,7 @@ header {
     margin-top: 400px;
 }
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 767px) {
     .img_research_2 {
         width: 110px;
         height: 150px;
@@ -739,7 +739,7 @@ header {
     margin-top: 400px;
 }
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 767px) {
     .img_research_3 {
         width: 110px;
         height: 150px;
@@ -840,7 +840,7 @@ header {
     margin-top: 380px;
 }
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 767px) {
     .div4 {
         margin-left: 40px;
     }
@@ -943,7 +943,7 @@ header {
     margin-top: 380px;
 }
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 767px) {
     .img_business_2 {
         width: 110px;
         height: 150px;
@@ -1035,7 +1035,7 @@ header {
     margin-top: 380px;
 }
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 767px) {
     .img_business_3 {
         width: 110px;
         height: 150px;
@@ -1145,7 +1145,7 @@ header {
     margin-top: 380px;
 }
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 767px) {
     .div5 {
         margin-left: 35px;
     }
@@ -1255,7 +1255,7 @@ header {
     margin-top: 380px;
 }
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 767px) {
     
     .img_developers_2 {
         width: 110px;
@@ -1347,7 +1347,7 @@ header {
     margin-top: 380px;
 }
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 767px) {
 
     .img_developers_3 {
         width: 110px;
@@ -1459,7 +1459,7 @@ header {
     margin-top: 380px;
 }
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 767px) {
     .div6 {
         margin-left: 35px;
     }
@@ -1569,7 +1569,7 @@ header {
     margin-top: 380px;
 }
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 767px) {
 
     .img_stories_2 {
         width: 110px;
